--- a/page2/index.html
+++ b/page2/index.html
@@ -1,3 +1,12 @@
-i don't need two pages
-<br/><a href="../page3"> third</a><br/>
-<br/><a href="./index.html"> first</a><br/>
+I needed to add this
+<style>
+  body {
+        color: rgb(255, 172, 19);
+        background-color: orange;
+        -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+    }
+</style>
+
+<br/><a href="../index.html"> first</a><br/>
