--- a/index.html
+++ b/index.html
@@ -29,4 +29,4 @@ here is the image i am required to use:
 <p class="o">Style element 1</p>
 <p class="t">Style element 2</p>
 <p class="h">Style element 3</p>
-<br/><a href="page2"> Other page</a><br/>
+<br/><a href="page2">Big explaination</a><br/>
