Add actually discription

--- a/page2/index.html
+++ b/page2/index.html
@@ -1,4 +1,9 @@
-I needed to add this
+<p>insertion sort is a simple sorting method that builds a sorted section. It starts with a single element in this sorted portion. Then, it examines unsorted elements one by one. If an element belongs before the current position, it shifts the elements. This process continues until all elements are in their correct places. While insertion sort has a worst-case time complexity of O(n^2), it's practical for small datasets and adapts well to already sorted data. Insertion sort is a simple sorting method that builds a sorted section. It starts with a single element in this sorted portion. Then, it examines unsorted elements one by one. If an element belongs before the current position, it shifts the elements. This process continues until all elements are in their correct places. While insertion sort has a worst-case time complexity of O(n^2), it's practical for small datasets and adapts well to already sorted data.
+
+
+
+
+</p>
 <style>
   body {
         color: rgb(255, 172, 19);
